syntax = "proto3";

package billing;

option go_package = "Billing-service/proto";

service BillingService {
  rpc CreateWallet(CreateWalletRequest) returns (WalletResponse);
  rpc GetWallet(GetWalletRequest) returns (WalletResponse);
  rpc DeleteAllWallets(Empty) returns (DeleteWallets);
}

message CreateWalletRequest {
  string userId = 1;
  string currencyCode = 2;
}

message GetWalletRequest{
    string userId = 1;
}

message WalletResponse {
  string id = 1;
  string userId = 2;
  string currencyCode = 3;
  double balance = 4;
}

message DeleteWallets {
  string message = 1;
}

message Empty {}